lab7 related - fix build issues for netlify

--- a/Lab7/netlify.toml
+++ b/Lab7/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   # The path to your app folder from the repo root
-  base = "frontend" 
+  base = "Lab7" 
   
   # The command to run inside that folder
   command = "npm run build"
